Change description text for a specific item

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 
                     let basePrice = 15000 + (gameState.round * 2000);
                     price = Math.floor(basePrice * (0.8 + Math.random() * 0.4));
-                    desc = "Mor bir ışık yayıyor... İçerisi tehlikeli görünüyor.";
+                    desc = "Kırmızı bir ışık yayıyor... İçerisi tehlikeli görünüyor.";
                 } else {
                     riskLevel = Math.floor(Math.random() * 3); // 0, 1, 2
                     riskLabel = risks[riskLevel];
