--- a/index.html
+++ b/index.html
@@ -586,38 +586,35 @@
                     "Cesaretini takdir ettim ama aptallığını değil.",
                     "Tamam tamam, sakin ol. Belki bir şeyler yapabiliriz."
                 ],
-                consulting: {
+                consulting_start: {
                     friendly: [
-                        "Bu {item} için bir uzman arkadaşıma danışmam lazım. Bekle.",
-                        "Şüpheli duruyor. Bir arkadaşa fotoğraf atıyorum, bekle.",
-                        "Hımm, {item}... Emin olamadım. Bir bilene sorayım."
+                        "Senden bu kadar kaliteli bir şey çıkmaz ama, neyse... Gidip bir ${itemName} uzmanıma danışıp geleyim.",
+                        "Tipine bakınca dolandırıcı gibisin ama mal gerçek gibi. Dur bi ${itemName} uzmanıma danışıp geleyim.",
+                        "Bunu çöpten bulmadığına emin misin? Bekle, ${itemName} uzmanıma danışıp geleyim."
                     ],
                     neutral: [
-                        "Bunun {item} olduğundan şüpheliyim. Uzmanımı arıyorum.",
-                        "Bir dakika, bu parçayı teyit etmem lazım. Bekle burada.",
-                        "Sahte olabilir. Bir telefon görüşmesi yapacağım."
+                        "Bunu bir ${itemName} uzmanıma danışıp geleyim. Bekle burada.",
+                        "Bir dakka, şunu hemen ${itemName} uzmanıma danışıp geliyorum.",
+                        "Bekle biraz, şunu bi ${itemName} uzmanıma danışıp geleyim."
                     ],
                     suspicious: [
-                        "Bana sahte mal kakalamaya çalışma. Sorgulatıyorum, bekle.",
-                        "Kıpırdama. Bunun çalıntı olup olmadığını kontrol ettiriyorum.",
-                        "Eğer bu sahteyse başın dertte. Bekle, kontrol ediyorum."
+                        "Gözüm seni hiç tutmadı. Bu ${itemName} uzmanıma göstermeden almam.",
+                        "Eğer sahteyse başın derde girer. Gidip ${itemName} uzmanıma danışıp geleyim.",
+                        "Malına güvenmiyorum, sana hiç güvenmiyorum. Mecburen ${itemName} uzmanıma danışıp geleyim."
                     ]
                 },
-                consultingReturn: {
+                consulting_end: {
                     friendly: [
-                        "Tamamdır, arkadaşım onayladı. Temiz malmış.",
-                        "Haberler iyi! Orijinalmiş. Devam edelim.",
-                        "Kusura bakma beklettim, mal sağlammış."
+                        "Arkadaşım baktı, sorun yokmuş. Şaşırtıcı... Hadi fiyatı konuşalım.",
+                        "Tamamdır, onay verdi. Hadi yine iyisin."
                     ],
                     neutral: [
-                        "Tamam, sordum. Bir sorun görünmüyor.",
-                        "Pekala, uzmanım onay verdi. Konuşmaya devam edebiliriz.",
-                        "Şimdilik temiz görünüyor. Fiyata dönelim."
+                        "Uzmanım inceledi. Tamamdır, pazarlığa geçelim.",
+                        "Geldim. Uzmanımla konuştum, bir sıkıntı yok."
                     ],
                     suspicious: [
-                        "Şanslısın, temiz çıktı. Ama gözüm üzerinde.",
-                        "Bu seferlik yırttın. Mal gerçekmiş.",
-                        "Tamam, sahte değilmiş. Ama fiyatım değişmedi."
+                        "Uzmanım gerçek dedi ama benim hala şüphelerim var. Neyse.",
+                        "Şimdilik inandım say. Ama gözüm üzerinde."
                     ]
                 }
             },
@@ -994,60 +991,27 @@
                     status: 'active',
                     dialogue: mem.dialogue || "Kaldığımız yerden devam edelim."
                 };
-                renderNegotiation();
             } else {
                 // Determine dialogue tone based on reputation
                 let repTier = 'neutral';
                 if (gameState.reputation > 70) repTier = 'friendly';
                 else if (gameState.reputation < 30) repTier = 'suspicious';
 
+                // --- EXPERT CONSULTATION TRIGGER ---
+                let isConsulting = false;
+                let consultChance = 0.3; // Default Neutral
+                if (repTier === 'friendly') consultChance = 0.1;
+                else if (repTier === 'suspicious') consultChance = 0.6;
+
+                if (Math.random() < consultChance) {
+                    isConsulting = true;
+                }
+                // -----------------------------------
+
                 let initialOffer = EO_AI.calculateOffer(item.realValue, gameState.reputation);
                 let startDialogue = EO_AI.getLine('inspecting', gameState.reputation);
 
-                // EXPERT CONSULTATION CHECK
-                let expertChance = 0.3; // Base Neutral 30%
-                if (gameState.reputation > 70) expertChance = 0.1; // Friendly 10%
-                if (gameState.reputation < 30) expertChance = 0.6; // Suspicious 60%
-
-                // Only trigger randomly, and maybe avoid if certified? The request didn't specify, so random for all.
-                // But logic says if he trusts you (certified), maybe less need?
-                // The requirements say "triggers randomly when a negotiation starts".
-                // I will apply it regardless of item type, as per "New Mechanic" section instructions.
-
-                if (Math.random() < expertChance) {
-                    // TRIGGER CONSULTATION
-                    let consultLine = EO_AI.getLine('consulting', gameState.reputation);
-                    consultLine = consultLine.replace('{item}', item.name);
-
-                    negotiationState = {
-                        item: item,
-                        currentOffer: initialOffer, // Calculated but hidden
-                        status: 'active',
-                        lastMove: 'start',
-                        dialogue: consultLine,
-                        isConsulting: true
-                    };
-
-                    renderNegotiation();
-
-                    // Phase 2: The Wait (5s)
-                    setTimeout(() => {
-                        // Check if state is still active/valid (user might have reloaded or something, though reload resets state)
-                        if (negotiationState && negotiationState.item.id === item.id) {
-                            negotiationState.isConsulting = false;
-
-                            let returnLine = EO_AI.getLine('consultingReturn', gameState.reputation);
-                            negotiationState.dialogue = returnLine;
-
-                            saveNegotiationState();
-                            renderNegotiation();
-                        }
-                    }, 5000);
-
-                    return; // Stop here, don't execute standard start logic
-                }
-
-                // Logic for rare/uncertified items (Standard Start)
+                // Logic for rare/uncertified items
                 if ((item.type === 'rare' || item.type === 'legendary') && !item.certified) {
                     // Suspicion Check logic
                     let suspicionChance = 0.8; // Base 80%
@@ -1079,7 +1043,17 @@
                      initialOffer = Math.floor(initialOffer * 1.5); // Better offer
 
                      // Check if this is a "Return with Certificate" moment
+                     // We know it is because we cleared 'mem' above if it was a return.
+                     // But we want specific dialogue if it's a return.
+                     // A simple heuristic: If the offer is much higher than what it would be uncertified.
+                     // Better: Just check if we had memory before we cleared it? No, too late.
+                     // Let's rely on standard certified lines, OR add a flag.
+
                      if (gameState.negotiationMemory[itemId] === undefined) {
+                         // It could be a fresh item OR a cleared memory item.
+                         // We can't easily distinguish without more state.
+                         // But we can say "Belgeletmişsin" generally if it is certified.
+
                          if(repTier === 'friendly') {
                              startDialogue = "Belgeletmişsin! İşte şimdi ciddileşebiliriz dostum.";
                          } else {
@@ -1088,18 +1062,42 @@
                      }
                 }
 
+                // If consulting, override dialogue
+                if (isConsulting) {
+                     const lines = EO_AI.dialogue.consulting_start[repTier];
+                     const rawLine = lines[Math.floor(Math.random() * lines.length)];
+                     startDialogue = rawLine.replace("${itemName}", item.name);
+                }
+
                 negotiationState = {
                     item: item,
                     currentOffer: initialOffer,
                     status: 'active', // active, sold, failed
                     lastMove: 'start',
-                    dialogue: startDialogue
+                    dialogue: startDialogue,
+                    isConsulting: isConsulting
                 };
 
                 // Save immediately
                 saveNegotiationState();
-                renderNegotiation();
+
+                // Handle the timer if consulting
+                if (isConsulting) {
+                    setTimeout(() => {
+                         // Check if we are still negotiating the same item
+                         if(negotiationState && negotiationState.item.id === item.id && negotiationState.isConsulting) {
+                             negotiationState.isConsulting = false;
+                             negotiationState.dialogue = EO_AI.getLine('consulting_end', gameState.reputation);
+                             
+                             // Update memory to reflect we returned
+                             saveNegotiationState();
+                             renderNegotiation();
+                         }
+                    }, 5000);
+                }
             }
+
+            renderNegotiation();
         };
 
         function saveNegotiationState() {
@@ -1118,8 +1116,8 @@
             const rarityInfo = Object.values(RARITY).find(r => r.id === item.type);
             const playerKnowsValue = item.certified;
 
-            // EXPERT CONSULTATION UI OVERRIDE
-            const isConsulting = state.isConsulting === true;
+            // Check consulting state
+            const isConsulting = state.isConsulting;
 
             // Patience Visualization
             let patienceHtml = '';
@@ -1134,33 +1132,26 @@
                     <div class="scene-container">
                         <div class="scene-overlay"></div>
                         <div class="eo-avatar-container">
-                             ${isConsulting
-                                ? `<div class="eo-avatar" style="animation:none; background:none; font-size:4rem;">📞</div>`
+                             ${isConsulting 
+                                ? `<div style="height:120px; display:flex; align-items:center; justify-content:center; color:#ccc; font-style:italic; font-size:1.2rem; text-shadow:0 0 10px rgba(0,0,0,0.8);">(Uzman aranıyor...)</div>` 
                                 : `<div class="eo-avatar">👺</div>`
                              }
                              <div class="speech-bubble">"${state.dialogue}"</div>
-                             ${!isConsulting ? `
-                                 <div style="margin-top:10px; font-size:1.2rem; background:rgba(0,0,0,0.5); padding:5px 10px; border-radius:10px;">
-                                    SABIR: ${patienceHtml}
-                                 </div>
-                             ` : ''}
+                             <div style="margin-top:10px; font-size:1.2rem; background:rgba(0,0,0,0.5); padding:5px 10px; border-radius:10px;">
+                                SABIR: ${patienceHtml}
+                             </div>
                         </div>
 
                         <div class="negotiation-desk">
                             <div class="desk-item">
                                 <h3 style="margin:0; color:var(--accent-color)">${item.name}</h3>
                                 <div style="font-size:0.8rem; opacity:0.8">${rarityInfo.label} ${item.certified ? '✅' : ''}</div>
-
-                                ${isConsulting
-                                    ? `<div style="margin-top:5px; font-weight:bold; color:#aaa">TEKLİF: ???</div>`
-                                    : `<div style="margin-top:5px; font-weight:bold; color:var(--success-color)">TEKLİF: ${state.currentOffer} ₺</div>`
-                                }
-
+                                <div style="margin-top:5px; font-weight:bold; color:var(--success-color)">TEKLİF: ${state.currentOffer} ₺</div>
                                 ${playerKnowsValue ? `<div style="font-size:0.7rem; color:#aaa">Gerçek Değer: ${item.realValue} ₺</div>` : ''}
                             </div>
 
                             <div class="desk-actions">
-                                <button class="btn" onclick="actionAccept()" ${isConsulting ? 'disabled' : ''}>✅ KABUL (${isConsulting ? '???' : state.currentOffer + ' ₺'})</button>
+                                <button class="btn" onclick="actionAccept()" ${isConsulting ? 'disabled' : ''}>✅ KABUL (${state.currentOffer} ₺)</button>
                                 <button class="btn" onclick="showCounterInput()" ${patienceLow || isConsulting ? 'disabled' : ''}>💬 PAZARLIK</button>
                                 <button class="btn btn-purple" onclick="actionBluff()" ${patienceLow || isConsulting ? 'disabled' : ''}>🎲 BLÖF</button>
                                 <button class="btn btn-danger" onclick="actionThreaten()" ${patienceLow || isConsulting ? 'disabled' : ''}>🤬 TEHDİT</button>
